Zoom in/out on mobile device fix

--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,7 @@ body {
     border: none;
     padding: 0 16px;
     flex: 1;
+    font-size: 16px;
 }
 
 .city-input:focus-visible {
